--- a/packages/hns-library/package.json
+++ b/packages/hns-library/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@iconify/svelte": "^3.1.0"
+  },
+  "dependencies": {
+    "svelte": "^3.54.0"
   }
 }
