--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 .DS_Store
 node_modules
 /build
-/.svelte-kit
 /package
 .env
 .env.*
 .turbo
-.svelte-kit
+**/.svelte-kit
 !.env.example
 
 # Ignore files for PNPM, NPM and YARN
