--- a/apps/hns/package.json
+++ b/apps/hns/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hns-ks",
+	"name": "hns",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -19,7 +19,6 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"hns-library": "workspace:^1.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
@@ -28,5 +27,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"hancss": "workspace:^1.0.0",
+		"hns-library": "workspace:^1.0.0"
+	}
 }
