--- a/packages/logoipsum/package.json
+++ b/packages/logoipsum/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "svelte": "^3.58.0"
+  }
 }
