--- a/apps/blymbo/package.json
+++ b/apps/blymbo/package.json
@@ -22,11 +22,14 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"sharp": "^0.32.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vanilla-lazyload": "^17.8.3",
+		"vite": "^4.2.0",
+		"vite-imagetools": "^4.0.18"
 	},
 	"type": "module",
 	"dependencies": {
