--- a/apps/blymbo/package.json
+++ b/apps/blymbo/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.12.0",
+		"database": "workspace:^1.0.0",
 		"hancss": "workspace:^1.0.0",
 		"hns-customcursor": "workspace:^1.0.0",
 		"hns-library": "workspace:^1.0.0",
