--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "db:generate": "prisma generate",
-    "db:push": "prisma db push --skip-generate"
+    "db:push": "prisma db push --skip-generate",
+    "prisma:generate": "prisma generate"
   },
   "prisma": {
     "seed": "npx vite-node prisma/seed.ts"
