--- a/apps/mastercrafter/package.json
+++ b/apps/mastercrafter/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
