--- a/apps/blymbo/package.json
+++ b/apps/blymbo/package.json
@@ -9,12 +9,12 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"prisma:generate": "prisma generate"
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.12.0",
 		"database": "workspace:^1.0.0",
 		"hancss": "workspace:^1.0.0",
 		"hns-customcursor": "workspace:^1.0.0",
